root-service/circuit-breaker.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: root-destination
spec:
  host: root-service
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 10
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 80
